--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "polyline2bezier"
 version = "0.1.0"
 edition = "2021"
+authors = ["Øyvind Hjermstad <@yvind>"]
+
+description = "For converting geo_types::LineString to a bezier spline."
+homepage = "https://github.com/yvind/polyline2bezier"
+repository = "https://github.com/yvind/polyline2bezier"
+readme = "README.md"
+license = "MIT"
+keywords = ["bezier", "geo"]
 
 [dependencies]
 geo-types = "^0.7.13"
