--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Øyvind Hjermstad <@yvind>"]
 
-description = "For converting geo_types::LineString to a bezier spline."
+description = "For converting geo_types::LineString to a cubic bezier spline."
 homepage = "https://github.com/yvind/polyline2bezier"
 repository = "https://github.com/yvind/polyline2bezier"
 readme = "README.md"
@@ -12,4 +12,4 @@ license = "MIT"
 keywords = ["bezier", "geo"]
 
 [dependencies]
-geo-types = "^0.7.13"
+geo-types = "0.7.16"
